--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,8 @@
         <item name="android:colorBackground">@color/finalDarkBg</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/abel</item>
+        <item name="colorControlNormal">@color/white</item>
+        <item name="android:editTextColor">@color/white</item>
     </style>
     <style name="Widget.App.ButtonStyle"
         parent="Widget.MaterialComponents.Button">
@@ -15,6 +17,8 @@
     </style>
     <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:background">@color/finalDarkBg</item>
+        <item name="android:textAlignment">center</item>
+
         <item name="android:textColorPrimary">@color/pinkPlayer</item>
     </style>
 
