--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -22,6 +22,7 @@
             app:layout_constraintVertical_bias="0.258" />
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
@@ -83,10 +84,11 @@
             <TextView
                 android:id="@+id/tvP1Score"
                 android:layout_width="48dp"
-                android:gravity="center_horizontal"
                 android:layout_height="match_parent"
                 android:layout_marginTop="30dp"
+                android:gravity="center_horizontal"
                 android:text="0"
+                android:textSize="18sp"
                 tools:layout_editor_absoluteX="142dp"
                 tools:layout_editor_absoluteY="62dp" />
 
@@ -98,17 +100,18 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="25dp"
                 android:text="-"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 tools:layout_editor_absoluteX="176dp"
                 tools:layout_editor_absoluteY="62dp" />
 
             <TextView
                 android:id="@+id/tvP2Score"
                 android:layout_width="48dp"
-                android:gravity="center_horizontal"
                 android:layout_height="match_parent"
                 android:layout_marginTop="30dp"
+                android:gravity="center_horizontal"
                 android:text="0"
+                android:textSize="18sp"
                 tools:layout_editor_absoluteX="202dp"
                 tools:layout_editor_absoluteY="62dp" />
 
@@ -168,13 +171,15 @@
             android:id="@+id/tvCurrentTurn"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:text="TextView"
             android:textSize="24sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <Button
             android:id="@+id/btnPlayAgain"
