--- a/app/src/main/res/layout/new_user.xml
+++ b/app/src/main/res/layout/new_user.xml
@@ -10,7 +10,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="360dp"
-        android:src="@drawable/ic_baby"
+        android:src="@drawable/ic_a_baby"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.832"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="124dp"
-        android:src="@drawable/ic_blue_haired_girl"
+        android:src="@drawable/ic_a_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.096"
         app:layout_constraintStart_toStartOf="parent"
