--- a/app/src/main/res/drawable/ic_a_brunette.xml
+++ b/app/src/main/res/drawable/ic_a_brunette.xml
@@ -1,36 +1,39 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="225dp"
-    android:height="259dp"
+    android:height="247dp"
     android:viewportWidth="225"
-    android:viewportHeight="259">
+    android:viewportHeight="247">
   <path
-      android:pathData="M19,72C19,32.236 51.236,0 91,0H122C161.765,0 194,32.236 194,72V175C194,214.765 161.765,247 122,247H91C51.236,247 19,214.765 19,175V72Z"
+      android:pathData="M9,113C9,73.235 41.236,41 81,41H134C173.765,41 206,73.235 206,113V139C206,178.765 173.765,211 134,211H81C41.236,211 9,178.765 9,139V113Z"
       android:fillColor="#72604F"/>
   <path
-      android:pathData="M85,32L128,32A66,66 0,0 1,194 98L194,128A66,66 0,0 1,128 194L85,194A66,66 0,0 1,19 128L19,98A66,66 0,0 1,85 32z"
+      android:pathData="M85,73L128,73A66,66 0,0 1,194 139L194,169A66,66 0,0 1,128 235L85,235A66,66 0,0 1,19 169L19,139A66,66 0,0 1,85 73z"
       android:fillColor="#9F8872"/>
   <path
-      android:pathData="M194,133m-19,0a19,19 0,1 1,38 0a19,19 0,1 1,-38 0"
+      android:pathData="M194,174m-19,0a19,19 0,1 1,38 0a19,19 0,1 1,-38 0"
       android:fillColor="#9F8872"/>
   <path
-      android:pathData="M19,133m-19,0a19,19 0,1 1,38 0a19,19 0,1 1,-38 0"
+      android:pathData="M19,174m-19,0a19,19 0,1 1,38 0a19,19 0,1 1,-38 0"
       android:fillColor="#9F8872"/>
   <path
-      android:pathData="M19.5,105.5C89.496,98.136 124.318,87.267 178,55L169,29.5L59,24.5L19.5,64V105.5Z"
+      android:pathData="M18.5,145.5C88.496,138.136 123.318,127.267 177,95L168,69.5L58,64.5L18.5,104V145.5Z"
       android:fillColor="#72604F"/>
   <path
-      android:pathData="M63,120m-6,0a6,6 0,1 1,12 0a6,6 0,1 1,-12 0"
+      android:pathData="M63,161m-6,0a6,6 0,1 1,12 0a6,6 0,1 1,-12 0"
       android:fillColor="#000000"/>
   <path
-      android:pathData="M151,120m-6,0a6,6 0,1 1,12 0a6,6 0,1 1,-12 0"
+      android:pathData="M151,161m-6,0a6,6 0,1 1,12 0a6,6 0,1 1,-12 0"
       android:fillColor="#000000"/>
   <path
-      android:pathData="M138,133C138,140.691 134.945,148.068 129.506,153.506C124.068,158.945 116.691,162 109,162C101.309,162 93.933,158.945 88.494,153.506C83.055,148.068 80,140.691 80,133L109,133H138Z"
+      android:pathData="M138,174C138,181.691 134.945,189.068 129.506,194.506C124.068,199.945 116.691,203 109,203C101.309,203 93.933,199.945 88.494,194.506C83.055,189.068 80,181.691 80,174L109,174H138Z"
       android:fillColor="#CD8A8A"/>
   <path
-      android:pathData="M42,136.5a10.5,3.5 0,1 0,21 0a10.5,3.5 0,1 0,-21 0z"
+      android:pathData="M42,177.5a10.5,3.5 0,1 0,21 0a10.5,3.5 0,1 0,-21 0z"
       android:fillColor="#FBBFBF"/>
   <path
-      android:pathData="M156,136.5a10.5,3.5 0,1 0,21 0a10.5,3.5 0,1 0,-21 0z"
+      android:pathData="M156,177.5a10.5,3.5 0,1 0,21 0a10.5,3.5 0,1 0,-21 0z"
       android:fillColor="#FBBFBF"/>
+  <path
+      android:pathData="M106,45m-45,0a45,45 0,1 1,90 0a45,45 0,1 1,-90 0"
+      android:fillColor="#72604F"/>
 </vector>
