--- a/app/src/main/res/drawable/ic_a_flower.xml
+++ b/app/src/main/res/drawable/ic_a_flower.xml
@@ -1,57 +1,63 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="225dp"
-    android:height="264dp"
-    android:viewportWidth="225"
-    android:viewportHeight="264">
+    android:width="234dp"
+    android:height="232dp"
+    android:viewportWidth="234"
+    android:viewportHeight="232">
   <path
-      android:pathData="M94,0L119,0A83,83 0,0 1,202 83L202,169A83,83 0,0 1,119 252L94,252A83,83 0,0 1,11 169L11,83A83,83 0,0 1,94 0z"
+      android:pathData="M98,17L123,17A83,83 0,0 1,206 100L206,137A83,83 0,0 1,123 220L98,220A83,83 0,0 1,15 137L15,100A83,83 0,0 1,98 17z"
       android:fillColor="#000000"/>
   <path
-      android:pathData="M66,38L147,38A55,55 0,0 1,202 93L202,186A55,55 0,0 1,147 241L66,241A55,55 0,0 1,11 186L11,93A55,55 0,0 1,66 38z"
+      android:pathData="M39.5,39.5m-39.5,0a39.5,39.5 0,1 1,79 0a39.5,39.5 0,1 1,-79 0"
       android:fillColor="#000000"/>
   <path
-      android:pathData="M85,41L128,41A66,66 0,0 1,194 107L194,137A66,66 0,0 1,128 203L85,203A66,66 0,0 1,19 137L19,107A66,66 0,0 1,85 41z"
+      android:pathData="M221.882,41C221.882,62.815 204.197,80.5 182.382,80.5C160.566,80.5 142.882,62.815 142.882,41C142.882,19.185 160.566,1.5 182.382,1.5C204.197,1.5 221.882,19.185 221.882,41Z"
+      android:fillColor="#000000"/>
+  <path
+      android:pathData="M70,55L151,55A55,55 0,0 1,206 110L206,165A55,55 0,0 1,151 220L70,220A55,55 0,0 1,15 165L15,110A55,55 0,0 1,70 55z"
+      android:fillColor="#000000"/>
+  <path
+      android:pathData="M89,58L132,58A66,66 0,0 1,198 124L198,154A66,66 0,0 1,132 220L89,220A66,66 0,0 1,23 154L23,124A66,66 0,0 1,89 58z"
       android:fillColor="#EBD3BE"/>
   <path
-      android:pathData="M194,142m-19,0a19,19 0,1 1,38 0a19,19 0,1 1,-38 0"
+      android:pathData="M198,159m-19,0a19,19 0,1 1,38 0a19,19 0,1 1,-38 0"
       android:fillColor="#EBD3BE"/>
   <path
-      android:pathData="M19,142m-19,0a19,19 0,1 1,38 0a19,19 0,1 1,-38 0"
+      android:pathData="M23,159m-19,0a19,19 0,1 1,38 0a19,19 0,1 1,-38 0"
       android:fillColor="#EBD3BE"/>
   <path
-      android:pathData="M63,129m-6,0a6,6 0,1 1,12 0a6,6 0,1 1,-12 0"
+      android:pathData="M67,146m-6,0a6,6 0,1 1,12 0a6,6 0,1 1,-12 0"
       android:fillColor="#000000"/>
   <path
-      android:pathData="M151,129m-6,0a6,6 0,1 1,12 0a6,6 0,1 1,-12 0"
+      android:pathData="M155,146m-6,0a6,6 0,1 1,12 0a6,6 0,1 1,-12 0"
       android:fillColor="#000000"/>
   <path
-      android:pathData="M138,142C138,149.691 134.945,157.068 129.506,162.506C124.068,167.945 116.691,171 109,171C101.309,171 93.933,167.945 88.494,162.506C83.055,157.068 80,149.691 80,142L109,142H138Z"
+      android:pathData="M142,159C142,166.691 138.945,174.068 133.506,179.506C128.068,184.945 120.691,188 113,188C105.309,188 97.933,184.945 92.494,179.506C87.055,174.068 84,166.691 84,159L113,159H142Z"
       android:fillColor="#CD8A8A"/>
   <path
-      android:pathData="M42,145.5a10.5,3.5 0,1 0,21 0a10.5,3.5 0,1 0,-21 0z"
+      android:pathData="M46,162.5a10.5,3.5 0,1 0,21 0a10.5,3.5 0,1 0,-21 0z"
       android:fillColor="#FBBFBF"/>
   <path
-      android:pathData="M184.902,40.859C161.059,60.012 95.592,108.075 18,113C21.604,-8.286 208.745,21.707 184.902,40.859Z"
+      android:pathData="M188.902,57.859C165.059,77.011 99.592,125.075 22,130C25.604,8.714 212.745,38.707 188.902,57.859Z"
       android:fillColor="#000000"/>
   <path
-      android:pathData="M156,145.5a10.5,3.5 0,1 0,21 0a10.5,3.5 0,1 0,-21 0z"
+      android:pathData="M160,162.5a10.5,3.5 0,1 0,21 0a10.5,3.5 0,1 0,-21 0z"
       android:fillColor="#FBBFBF"/>
   <path
-      android:pathData="M26.572,70.571m-6.31,0a6.31,6.31 0,1 1,12.619 0a6.31,6.31 0,1 1,-12.619 0"
+      android:pathData="M30.572,87.571m-6.31,0a6.31,6.31 0,1 1,12.619 0a6.31,6.31 0,1 1,-12.619 0"
       android:fillColor="#FBBFBF"/>
   <path
-      android:pathData="M25.309,79.405m-6.31,0a6.31,6.31 0,1 1,12.619 0a6.31,6.31 0,1 1,-12.619 0"
+      android:pathData="M29.309,96.405m-6.31,0a6.31,6.31 0,1 1,12.619 0a6.31,6.31 0,1 1,-12.619 0"
       android:fillColor="#FBBFBF"/>
   <path
-      android:pathData="M32.881,81.929m-6.31,0a6.31,6.31 0,1 1,12.619 0a6.31,6.31 0,1 1,-12.619 0"
+      android:pathData="M36.881,98.929m-6.31,0a6.31,6.31 0,1 1,12.619 0a6.31,6.31 0,1 1,-12.619 0"
       android:fillColor="#FBBFBF"/>
   <path
-      android:pathData="M39.19,76.881m-6.31,0a6.31,6.31 0,1 1,12.619 0a6.31,6.31 0,1 1,-12.619 0"
+      android:pathData="M43.19,93.881m-6.31,0a6.31,6.31 0,1 1,12.619 0a6.31,6.31 0,1 1,-12.619 0"
       android:fillColor="#FBBFBF"/>
   <path
-      android:pathData="M35.405,69.31m-6.31,0a6.31,6.31 0,1 1,12.619 0a6.31,6.31 0,1 1,-12.619 0"
+      android:pathData="M39.405,86.31m-6.31,0a6.31,6.31 0,1 1,12.619 0a6.31,6.31 0,1 1,-12.619 0"
       android:fillColor="#FBBFBF"/>
   <path
-      android:pathData="M31.619,75.619m-6.31,0a6.31,6.31 0,1 1,12.619 0a6.31,6.31 0,1 1,-12.619 0"
+      android:pathData="M35.619,92.619m-6.31,0a6.31,6.31 0,1 1,12.619 0a6.31,6.31 0,1 1,-12.619 0"
       android:fillColor="#FFFA89"/>
 </vector>
