--- a/app/src/main/res/layout/fragment_game_type.xml
+++ b/app/src/main/res/layout/fragment_game_type.xml
@@ -37,7 +37,7 @@
 
     <Button
         android:id="@+id/btnPlayPerson"
-        android:layout_width="wrap_content"
+        android:layout_width="290dp"
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="400dp"
@@ -49,7 +49,7 @@
 
     <Button
         android:id="@+id/btnPlayComputer"
-        android:layout_width="wrap_content"
+        android:layout_width="290dp"
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="500dp"
