--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="purplePlayer">#8146EA</color>
     <color name="orangePlayer">#FF774C</color>
     <color name="yellowPlayer">#FFEB3B</color>
+    <color name="computerPlayer">#A3A3A3</color>
+    <color name="computerPlayerDark">#6E6E6E</color>
     <color name="yourTurnHeader">#5E81FF</color>
     <color name="yourTurnBox">#7694FF</color>
     <color name="waitOppHeader">#88A2FF</color>
@@ -24,7 +26,7 @@
     <color name="darkBg">#3C3B66</color>
     <color name="darkBox">#4B5292</color>
     <color name="finalDarkBg">#222577</color>
-    <color name="darkGround">#131660</color>
+    <color name="darkGround">#0E1043</color>
     <color name="primaryBtn">#3F51B5</color>
     <color name="iconNight">#FFFFFF</color>
     <color name="textNight">#FFFFFF</color>
