--- a/app/src/main/res/layout/fragment_dialog.xml
+++ b/app/src/main/res/layout/fragment_dialog.xml
@@ -36,7 +36,7 @@
         android:id="@+id/linearAvatarColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="64dp"
         android:layout_marginBottom="32dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
@@ -46,14 +46,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
+
         <!-- Colors -->
-
-
         <TextView
             android:id="@+id/tvAvatars"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_margin="10dp"
             android:text="Avatars"
             android:textSize="24sp" />
 
@@ -61,7 +60,7 @@
             android:id="@+id/avatars"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="25dp"
+            android:layout_marginBottom="25dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:padding="15dp">
@@ -69,7 +68,7 @@
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/linearAvatarA"
                 android:layout_width="match_parent"
-                android:layout_height="90dp"
+                android:layout_height="100dp"
                 android:gravity="center_horizontal"
                 android:orientation='horizontal'>
 
@@ -82,16 +81,16 @@
                     android:layout_margin="5dp"
                     android:layout_weight="33"
                     android:clickable="true"
+                    android:contentDescription="@string/av_bangs"
                     android:focusable="true"
                     app:cardCornerRadius="50dp"
                     tools:layout_editor_absoluteX="50dp"
-                    tools:layout_editor_absoluteY="32dp"
-                    android:contentDescription="@string/av_bangs">
+                    tools:layout_editor_absoluteY="32dp">
 
                     <ImageView
                         android:id="@+id/ivBangs"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_a_bangs" />
                 </com.google.android.material.card.MaterialCardView>
@@ -105,16 +104,16 @@
                     android:layout_margin="5dp"
                     android:layout_weight="33"
                     android:clickable="true"
+                    android:contentDescription="@string/av_curly"
                     android:focusable="true"
                     app:cardCornerRadius="50dp"
                     tools:layout_editor_absoluteX="50dp"
-                    tools:layout_editor_absoluteY="32dp"
-                    android:contentDescription="@string/av_curly">
+                    tools:layout_editor_absoluteY="32dp">
 
                     <ImageView
                         android:id="@+id/ivCurly"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_a_curly" />
                 </com.google.android.material.card.MaterialCardView>
@@ -128,16 +127,16 @@
                     android:layout_margin="5dp"
                     android:layout_weight="33"
                     android:clickable="true"
+                    android:contentDescription="@string/av_buzz"
                     android:focusable="true"
                     app:cardCornerRadius="50dp"
                     tools:layout_editor_absoluteX="50dp"
-                    tools:layout_editor_absoluteY="32dp"
-                    android:contentDescription="@string/av_buzz">
+                    tools:layout_editor_absoluteY="32dp">
 
                     <ImageView
                         android:id="@+id/ivBuzz"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_a_buzz" />
                 </com.google.android.material.card.MaterialCardView>
@@ -146,7 +145,7 @@
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/linearAvatarB"
                 android:layout_width="match_parent"
-                android:layout_height="90dp"
+                android:layout_height="100dp"
                 android:gravity="center_horizontal"
                 android:orientation='horizontal'>
 
@@ -159,16 +158,16 @@
                     android:layout_margin="5dp"
                     android:layout_weight="33"
                     android:clickable="true"
+                    android:contentDescription="@string/av_flower"
                     android:focusable="true"
                     app:cardCornerRadius="50dp"
                     tools:layout_editor_absoluteX="50dp"
-                    tools:layout_editor_absoluteY="32dp"
-                    android:contentDescription="@string/av_flower">
+                    tools:layout_editor_absoluteY="32dp">
 
                     <ImageView
                         android:id="@+id/ivFlower"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_a_flower" />
                 </com.google.android.material.card.MaterialCardView>
@@ -182,16 +181,16 @@
                     android:layout_margin="5dp"
                     android:layout_weight="33"
                     android:clickable="true"
+                    android:contentDescription="@string/av_brunette"
                     android:focusable="true"
                     app:cardCornerRadius="50dp"
                     tools:layout_editor_absoluteX="50dp"
-                    tools:layout_editor_absoluteY="32dp"
-                    android:contentDescription="@string/av_brunette">
+                    tools:layout_editor_absoluteY="32dp">
 
                     <ImageView
                         android:id="@+id/ivBrunette"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_a_brunette" />
                 </com.google.android.material.card.MaterialCardView>
@@ -205,16 +204,16 @@
                     android:layout_margin="5dp"
                     android:layout_weight="33"
                     android:clickable="true"
+                    android:contentDescription="@string/av_neon"
                     android:focusable="true"
                     app:cardCornerRadius="50dp"
                     tools:layout_editor_absoluteX="50dp"
-                    tools:layout_editor_absoluteY="32dp"
-                    android:contentDescription="@string/av_neon">
+                    tools:layout_editor_absoluteY="32dp">
 
                     <ImageView
                         android:id="@+id/ivNeon"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_a_neon" />
                 </com.google.android.material.card.MaterialCardView>
@@ -225,6 +224,7 @@
             android:id="@+id/tvPlayerColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:text="Color"
             android:textSize="24sp" />
 
@@ -232,7 +232,7 @@
             android:id="@+id/playerColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="25dp"
+            android:layout_marginBottom="25dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:padding="15dp">
@@ -252,8 +252,8 @@
                     android:layout_weight="33"
                     android:background="@drawable/btn_blue_selector"
                     android:button="@null"
-                    android:shadowColor="@color/pinkPlayer"
-                    android:contentDescription="@string/blue"/>
+                    android:contentDescription="@string/blue"
+                    android:shadowColor="@color/pinkPlayer" />
 
                 <RadioButton
                     android:id="@+id/rbColorRed"
@@ -263,7 +263,7 @@
                     android:layout_weight="33"
                     android:background="@drawable/btn_red_selector"
                     android:button="@null"
-                    android:contentDescription="@string/red"/>
+                    android:contentDescription="@string/red" />
 
                 <RadioButton
                     android:id="@+id/rbColorYellow"
@@ -273,7 +273,7 @@
                     android:layout_weight="33"
                     android:background="@drawable/btn_yellow_selector"
                     android:button="@null"
-                    android:contentDescription="@string/yellow"/>
+                    android:contentDescription="@string/yellow" />
             </RadioGroup>
 
             <RadioGroup
@@ -291,7 +291,7 @@
                     android:layout_weight="33"
                     android:background="@drawable/btn_pink_selector"
                     android:button="@null"
-                    android:contentDescription="@string/pink"/>
+                    android:contentDescription="@string/pink" />
 
                 <RadioButton
                     android:id="@+id/rbColorGreen"
@@ -301,7 +301,7 @@
                     android:layout_weight="33"
                     android:background="@drawable/btn_green_selector"
                     android:button="@null"
-                    android:contentDescription="@string/green"/>
+                    android:contentDescription="@string/green" />
 
                 <RadioButton
                     android:id="@+id/rbColorPurple"
@@ -311,7 +311,7 @@
                     android:layout_weight="33"
                     android:background="@drawable/btn_purple_selector"
                     android:button="@null"
-                    android:contentDescription="@string/purple"/>
+                    android:contentDescription="@string/purple" />
             </RadioGroup>
 
         </LinearLayout>
