--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,10 +26,17 @@
     <color name="darkBg">#3C3B66</color>
     <color name="darkBox">#4B5292</color>
     <color name="finalDarkBg">#222577</color>
+    <color name="finalDarkBg_75">#BF222577</color>
+    <color name="finalDarkBg_50">#80222577</color>
+    <color name="finalDarkBg_25">#40222577</color>
     <color name="darkGround">#0E1043</color>
-    <color name="primaryBtn">#3F51B5</color>
+    <color name="primaryBtn">#3D4BCC</color>
+<!--    <color name="primaryBtn">#3F51B5</color>-->
     <color name="iconNight">#FFFFFF</color>
     <color name="textNight">#FFFFFF</color>
-    <color name="btnCustom">#514CDF</color>
-    <color name="settingsBtnBg">#2A26A6</color>
+    <color name="btnCustom">#4648EA</color>
+    <color name="settingsBtnBg">#F21B178E</color>
+
+<!--    <color name="btnCustom">#514CDF</color>-->
+<!--    <color name="settingsBtnBg">#2A26A6</color>-->
 </resources>
