--- a/app/src/main/res/layout/fragment_dialog.xml
+++ b/app/src/main/res/layout/fragment_dialog.xml
@@ -248,6 +248,7 @@
                 android:gravity="center_horizontal"
                 android:orientation='horizontal'>
 
+
                 <RadioButton
                     android:id="@+id/rbColorBlue"
                     android:layout_width="0dp"
@@ -256,8 +257,7 @@
                     android:layout_weight="33"
                     android:background="@drawable/btn_blue_selector"
                     android:button="@null"
-                    android:contentDescription="@string/blue"
-                    android:shadowColor="@color/pinkPlayer" />
+                    android:contentDescription="@string/blue" />
 
                 <RadioButton
                     android:id="@+id/rbColorRed"
